Update webservice name

--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,21 @@
 databases:
-  - name: doctors_ngn
-    databaseName: doctors_ngn_119b
+  - name: doctors_ngn  # Match this to the actual Render database
+    databaseName: doctors_ngn_119b  # Ensure the actual name matches here
     user: hossain_araf
     plan: free
-
 services:
   - type: web
-    name: doctors_ngn_119b
+    name: doctors_ngn  # Use the correct name for your web service here
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh && bundle exec rails db:migrate && rails db:schema:load"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: "bundle exec rails server"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: doctors_ngn_119b
+          name: doctors_ngn  # This matches the `name` under `databases`
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
-        value: 2 # sensible default
+        value: 2
