--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: doctors_ngn  # This matches the `name` under `databases`
+          name: doctors_ngn_119b  # This matches the `name` under `databases`
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
